# ESP32S3-Sense-OV3660

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults  sdkconfig.xiao_esp32s3_sense  sdkconfig_backup
boards/xiao_esp32s3_sense/: board.cmake  pins.h
main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  camera_config_ov3660.h  camera_streamer.c  camera_streamer_backup.c  idf_component.yml
